Clean (#6)
* Clean

* clean

* Update coverage.html

* Update logger.go

* docs
